--- a/views/main.html
+++ b/views/main.html
@@ -1,18 +1,45 @@
 <h1>the main page</h1>
 
+<div ng-controller="ModalCtrl">
+    <script type="text/ng-template" id="myModalContent.html">
+        <div class="modal-header">
+            <h3 class="modal-title">Title of Art Work</h3>
+        </div>
+        <div class="modal-body">
+            <ul>
+                <li ng-repeat="item in items">
+                    <a href="#" ng-click="$event.preventDefault(); selected.item = item">{{ item }}</a>
+                </li>
+            </ul>
+            Selected: <b>{{ selected.item }}</b>
+        </div>
+        <div class="modal-footer">
+            <button class="btn btn-primary" type="button" ng-click="ok()">OK</button>
+            <button class="btn btn-warning" type="button" ng-click="cancel()">Cancel</button>
+        </div>
+    </script>
 
-<div>
-  <img class="painting" id="couch_and_tv" src="img/couch_and_tv.jpg" />
-  <img class="painting" src="img/bird.jpg" />
-  <img class="painting" src="img/brown_bird.jpg" />
-  <img class="painting" src="img/death_star_route.jpg" />
-  <img class="painting" src="img/frontside_air.jpg" />
-  <img class="painting" src="img/ghost_release.jpg" />
-  <img class="painting" src="img/long_hair.jpg" />
-  <!-- <div class="painting"><img src="img/minimal.jpg" /></div> -->
-  <img class="painting" src="img/mustache_man.jpg" />
-  <img class="painting" src="img/on_the_couch.jpg" />
-  <img class="painting" src="img/open_country.jpg" />
-  <img class="painting" src="img/sea_of_skulls.jpg" />
-  <img class="painting" src="img/window_window.jpg" />
+
+    <!-- <button type="button" class="btn btn-default" ng-click="open()">Open me!</button>
+    <button type="button" class="btn btn-default" ng-click="open('lg')">Large modal</button>
+    <button type="button" class="btn btn-default" ng-click="open('sm')">Small modal</button>
+    <button type="button" class="btn btn-default" ng-click="toggleAnimation()">Toggle Animation ({{ animationsEnabled }})</button> -->
+    <div ng-show="selected">Selection from a modal: {{ selected }}</div>
+
+
+  <div>
+    <img ng-click="open()" class="painting" id="couch_and_tv" src="img/couch_and_tv.jpg" />
+    <img ng-click="open()" class="painting" src="img/bird.jpg" />
+    <img ng-click="open()" class="painting" src="img/brown_bird.jpg" />
+    <img ng-click="open()" class="painting" src="img/death_star_route.jpg" />
+    <img ng-click="open()" class="painting" src="img/frontside_air.jpg" />
+    <img ng-click="open()" class="painting" src="img/ghost_release.jpg" />
+    <img ng-click="open()" class="painting" src="img/long_hair.jpg" />
+    <img ng-click="open()" class="painting" src="img/mustache_man.jpg" />
+    <img ng-click="open()" class="painting" src="img/on_the_couch.jpg" />
+    <img ng-click="open()" class="painting" src="img/open_country.jpg" />
+    <img ng-click="open()" class="painting" src="img/sea_of_skulls.jpg" />
+    <img ng-click="open()" class="painting" src="img/window_window.jpg" />
+  </div>
+
 </div>
