--- a/views/main.html
+++ b/views/main.html
@@ -1,45 +1,139 @@
 <h1>the main page</h1>
 
-<div ng-controller="ModalCtrl">
-    <script type="text/ng-template" id="myModalContent.html">
-        <div class="modal-header">
-            <h3 class="modal-title">Title of Art Work</h3>
-        </div>
-        <div class="modal-body">
-            <ul>
-                <li ng-repeat="item in items">
-                    <a href="#" ng-click="$event.preventDefault(); selected.item = item">{{ item }}</a>
-                </li>
-            </ul>
-            Selected: <b>{{ selected.item }}</b>
-        </div>
-        <div class="modal-footer">
-            <button class="btn btn-primary" type="button" ng-click="ok()">OK</button>
-            <button class="btn btn-warning" type="button" ng-click="cancel()">Cancel</button>
-        </div>
-    </script>
+<!-- Modal Structure -->
+<div id="Modal1" class="modal container">
+    <div class="modal-content">
+        <h2>Couch and TV</h2>
+    </div>
+    <div class="modal-footer">
+        <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Agree</a>
+    </div>
+</div>
 
+<!-- Modal Structure -->
+<div id="Modal2" class="modal container">
+    <div class="modal-content">
+        <h2>Bird</h2>
+    </div>
+    <div class="modal-footer">
+        <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Agree</a>
+    </div>
+</div>
 
-    <!-- <button type="button" class="btn btn-default" ng-click="open()">Open me!</button>
-    <button type="button" class="btn btn-default" ng-click="open('lg')">Large modal</button>
-    <button type="button" class="btn btn-default" ng-click="open('sm')">Small modal</button>
-    <button type="button" class="btn btn-default" ng-click="toggleAnimation()">Toggle Animation ({{ animationsEnabled }})</button> -->
-    <div ng-show="selected">Selection from a modal: {{ selected }}</div>
+<!-- Modal Structure -->
+<div id="Modal3" class="modal container">
+    <div class="modal-content">
+        <h2>Brown Bird</h2>
+    </div>
+    <div class="modal-footer">
+        <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Agree</a>
+    </div>
+</div>
 
+<!-- Modal Structure -->
+<div id="Modal4" class="modal container">
+    <div class="modal-content">
+        <h2>Death Star Route</h2>
+    </div>
+    <div class="modal-footer">
+        <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Agree</a>
+    </div>
+</div>
+
+<!-- Modal Structure -->
+<div id="Modal5" class="modal container">
+    <div class="modal-content">
+        <h2>Modal header</h2>
+    </div>
+    <div class="modal-footer">
+        <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Agree</a>
+    </div>
+</div>
+
+<!-- Modal Structure -->
+<div id="Modal6" class="modal container">
+    <div class="modal-content">
+        <h2>Modal header</h2>
+    </div>
+    <div class="modal-footer">
+        <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Agree</a>
+    </div>
+</div>
+
+<!-- Modal Structure -->
+<div id="Modal7" class="modal container">
+    <div class="modal-content">
+        <h2>Modal header</h2>
+    </div>
+    <div class="modal-footer">
+        <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Agree</a>
+    </div>
+</div>
+
+<!-- Modal Structure -->
+<div id="Modal8" class="modal container">
+    <div class="modal-content">
+        <h2>Modal header</h2>
+    </div>
+    <div class="modal-footer">
+        <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Agree</a>
+    </div>
+</div>
+
+<!-- Modal Structure -->
+<div id="Modal9" class="modal container">
+    <div class="modal-content">
+        <h2>Modal header</h2>
+    </div>
+    <div class="modal-footer">
+        <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Agree</a>
+    </div>
+</div>
+
+<!-- Modal Structure -->
+<div id="Modal10" class="modal container">
+    <div class="modal-content">
+        <h2>Modal header</h2>
+    </div>
+    <div class="modal-footer">
+        <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Agree</a>
+    </div>
+</div>
+
+<!-- Modal Structure -->
+<div id="Modal11" class="modal container">
+    <div class="modal-content">
+        <h2>Modal header</h2>
+    </div>
+    <div class="modal-footer">
+        <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Agree</a>
+    </div>
+</div>
+
+<!-- Modal Structure -->
+<div id="Modal12" class="modal container">
+    <div class="modal-content">
+        <h2>Modal header</h2>
+    </div>
+    <div class="modal-footer">
+        <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Agree</a>
+    </div>
+</div>
 
   <div>
-    <img ng-click="open()" class="painting" id="couch_and_tv" src="img/couch_and_tv.jpg" />
-    <img ng-click="open()" class="painting" src="img/bird.jpg" />
-    <img ng-click="open()" class="painting" src="img/brown_bird.jpg" />
-    <img ng-click="open()" class="painting" src="img/death_star_route.jpg" />
-    <img ng-click="open()" class="painting" src="img/frontside_air.jpg" />
-    <img ng-click="open()" class="painting" src="img/ghost_release.jpg" />
-    <img ng-click="open()" class="painting" src="img/long_hair.jpg" />
-    <img ng-click="open()" class="painting" src="img/mustache_man.jpg" />
-    <img ng-click="open()" class="painting" src="img/on_the_couch.jpg" />
-    <img ng-click="open()" class="painting" src="img/open_country.jpg" />
-    <img ng-click="open()" class="painting" src="img/sea_of_skulls.jpg" />
-    <img ng-click="open()" class="painting" src="img/window_window.jpg" />
+    <img href="#Modal1" class="painting" src="img/couch_and_tv.jpg" modal/>
+    <img href="#Modal2" class="painting" src="img/bird.jpg" modal/>
+    <img href="#Modal3" class="painting" src="img/brown_bird.jpg" modal/>
+    <img href="#Modal4" class="painting" src="img/death_star_route.jpg" modal/>
+    <img href="#Modal5" class="painting" src="img/frontside_air.jpg" modal/>
+    <img href="#Modal6" class="painting" src="img/ghost_release.jpg" modal/>
+    <img href="#Modal7" class="painting" src="img/long_hair.jpg" modal/>
+    <img href="#Modal8" class="painting" src="img/mustache_man.jpg" modal/>
+    <img href="#Modal9" class="painting" src="img/on_the_couch.jpg" modal/>
+    <img href="#Modal10" class="painting" src="img/open_country.jpg" modal/>
+    <img href="#Modal11" class="painting" src="img/sea_of_skulls.jpg" modal/>
+    <img href="#Modal12" class="painting" src="img/window_window.jpg" modal/>
   </div>
 
-</div>
+<!-- </div>
+ -->
