--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,10 +1,20 @@
 html body {
-  background: url('') no-repeat center center fixed; 
+  /*background-color: green;*/
+  background-image: url('public/img/backgroundRoad.jpg') no-repeat; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  background-image: rotate(90deg);
+}
+
+h3, .title {
+  color: black;
+  text-shadow: 2px 2px white;
+}
+
+.mainImage {
+  width: 100%;  
+  /*transform: rotate(90deg);*/
 }
 
 .title {
@@ -12,7 +22,12 @@ html body {
 }
 
 .linkList {
+  text-align: center;
+  display: inline-flex;
+}
 
+.linkList li {
+  margin: 10px;
 }
 
 .pictureBoard {
@@ -41,8 +56,8 @@ html body {
 }
 
 .paymentForm {
-  margin-left: 500px;
-  margin-right: 500px;
+  margin-left: 400px;
+  margin-right: 400px;
   padding: 25px;
   text-align: center;
   border: 1px solid black;
@@ -50,4 +65,13 @@ html body {
 
 footer {
   text-align: center;
+}
+
+.nav-wrapper {
+  background-color: green;
+}
+
+.admin {
+  padding: 25px;
+  border: 1px solid black;
 }
