--- a/public/views/about.html
+++ b/public/views/about.html
@@ -2,15 +2,15 @@
 <span data-lettering="words">This is a sentence</span> 
 <div data-lettering="lines">This<br/>is<br/>a<br/>sentence</div>
  -->
-<div class="aboutPic materialboxed" materialboxed>
-  <img class="text-center" src="public/img/Graeme.jpg">
+<div class="aboutPic materialboxed responsive-img" materialboxed>
+  <img class="text-center" src="public/img/guramLogo.jpg">
 </div>
 
 <section id="contact">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Contact Graeme Smith</h2>
+                    <h2 class="title">Contact Graeme Smith</h2>
                     <hr />
                 </div>
             </div>
