--- a/public/views/main.html
+++ b/public/views/main.html
@@ -1,134 +1,33 @@
-<!-- Modal Structure -->
-<div id="Modal1" class="modal container">
-    <div class="modal-content">
-        <h2>Couch and TV</h2>
-        <h3>Price: $50</h3>
-        <a href="/#/payment" class="modal-action modal-close waves-effect waves-green btn-flat">Purchase</a>
-        <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Close</a>
-    </div>
+<div class="slider" slider>
+    <ul class="slides">
+        <li>
+            <img class="mainImage" src="public/img/sea_of_skulls.jpg" style=> <!-- random image -->
+            <div class="caption center-align">
+                <h1 class="title">Graeme Smith</h1>
+                <h5 class="light grey-text text-lighten-3">Artist</h5>
+            </div>
+        </li>
+        <li>
+            <img src="public/img/daymonAndBen1.jpg"> <!-- random image -->
+            <div class="caption left-align">
+                <h3>Graeme Smith</h3>
+                <h5 class="light grey-text text-lighten-3">Rock Star</h5>
+            </div>
+        </li>
+        <li>
+            <img src="public/img/frontside_air.jpg"> <!-- random image -->
+            <div class="caption right-align">
+                <h3>Graeme Smith</h3>
+                <h5 class="light grey-text text-lighten-3">Unbound</h5>
+            </div>
+        </li>
+        <li>
+            <img src="public/img/death_star_route.jpg"> <!-- random image -->
+            <div class="caption center-align">
+                <h3>Graeme Smith</h3>
+                <h5 class="light grey-text text-lighten-3"></h5>
+            </div>
+        </li>
+    </ul>
 </div>
 
-<!-- Modal Structure -->
-<div id="Modal2" class="modal container">
-    <div class="modal-content">
-        <h2>Bird</h2>
-        <h3>Price: $50</h3>
-        <a href="/#/payment" class="modal-action modal-close waves-effect waves-green btn-flat">Purchase</a>
-        <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Close</a>
-    </div>
-</div>
-
-<!-- Modal Structure -->
-<div id="Modal3" class="modal container">
-    <div class="modal-content">
-        <h2>Brown Bird</h2>
-        <h3>Price: $50</h3>
-        <a href="/#/payment" class="modal-action modal-close waves-effect waves-green btn-flat">Purchase</a>
-        <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Close</a>
-    </div>
-</div>
-
-<!-- Modal Structure -->
-<div id="Modal4" class="modal container">
-    <div class="modal-content">
-        <h2>Death Star Route</h2>
-        <h3>Price: $50</h3>
-        <a href="/#/payment" class="modal-action modal-close waves-effect waves-green btn-flat">Purchase</a>
-        <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Close</a>
-    </div>
-</div>
-
-<!-- Modal Structure -->
-<div id="Modal5" class="modal container">
-    <div class="modal-content">
-        <h2>Frontside Air</h2>
-        <h3>Price: $50</h3>
-        <a href="/#/payment" class="modal-action modal-close waves-effect waves-green btn-flat">Purchase</a>
-        <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Close</a>
-    </div>
-</div>
-
-<!-- Modal Structure -->
-<div id="Modal6" class="modal container">
-    <div class="modal-content">
-        <h2>Ghost Release</h2>
-        <h3>Price: $50</h3>
-        <a href="/#/payment" class="modal-action modal-close waves-effect waves-green btn-flat">Purchase</a>
-        <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Close</a>
-    </div>
-</div>
-
-<!-- Modal Structure -->
-<div id="Modal7" class="modal container">
-    <div class="modal-content">
-        <h2>Long Hair</h2>
-        <h3>Price: $50</h3>
-        <a href="/#/payment" class="modal-action modal-close waves-effect waves-green btn-flat">Purchase</a>
-        <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Close</a>
-    </div>
-</div>
-
-<!-- Modal Structure -->
-<div id="Modal8" class="modal container">
-    <div class="modal-content">
-        <h2>Mustache Man</h2>
-        <h3>Price: $50</h3>
-        <a href="/#/payment" class="modal-action modal-close waves-effect waves-green btn-flat">Purchase</a>
-        <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Close</a>
-    </div>
-</div>
-
-<!-- Modal Structure -->
-<div id="Modal9" class="modal container">
-    <div class="modal-content">
-        <h2>On the Couch</h2>
-        <h3>Price: $50</h3>
-        <a href="/#/payment" class="modal-action modal-close waves-effect waves-green btn-flat">Purchase</a>
-        <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Close</a>
-    </div>
-</div>
-
-<!-- Modal Structure -->
-<div id="Modal10" class="modal container">
-    <div class="modal-content">
-        <h2>Open Country</h2>
-        <h3>Price: $50</h3>
-        <a href="/#/payment" class="modal-action modal-close waves-effect waves-green btn-flat">Purchase</a>
-        <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Close</a>
-    </div>
-</div>
-
-<!-- Modal Structure -->
-<div id="Modal11" class="modal container">
-    <div class="modal-content">
-        <h2>Sea of Skulls</h2>
-        <h3>Price: $50</h3>
-        <a href="/#/payment" class="modal-action modal-close waves-effect waves-green btn-flat">Purchase</a>
-        <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Close</a>
-    </div>
-</div>
-
-<!-- Modal Structure -->
-<div id="Modal12" class="modal container">
-    <div class="modal-content">
-        <h2>Window Window on the wall</h2>
-        <h3>Price: $50</h3>
-        <a href="/#/payment" class="modal-action modal-close waves-effect waves-green btn-flat">Purchase</a>
-        <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Close</a>
-    </div>   
-</div>
-
-  <div>
-    <img href="#Modal1" class="painting" src="public/img/couch_and_tv.jpg" modal/>
-    <img href="#Modal2" class="painting" src="public/img/bird.jpg" modal/>
-    <img href="#Modal3" class="painting" src="public/img/brown_bird.jpg" modal/>
-    <img href="#Modal4" class="painting" src="public/img/death_star_route.jpg" modal/>
-    <img href="#Modal5" class="painting" src="public/img/frontside_air.jpg" modal/>
-    <img href="#Modal6" class="painting" src="public/img/ghost_release.jpg" modal/>
-    <img href="#Modal7" class="painting" src="public/img/long_hair.jpg" modal/>
-    <img href="#Modal8" class="painting" src="public/img/mustache_man.jpg" modal/>
-    <img href="#Modal9" class="painting" src="public/img/on_the_couch.jpg" modal/>
-    <img href="#Modal10" class="painting" src="public/img/open_country.jpg" modal/>
-    <img href="#Modal11" class="painting" src="public/img/sea_of_skulls.jpg" modal/>
-    <img href="#Modal12" class="painting" src="public/img/window_window.jpg" modal/>
-  </div>
