Added a back end, Graeme In is almost functional, checkout is not

--- a/public/app/views/about.html
+++ b/public/app/views/about.html
@@ -3,7 +3,7 @@
 <div data-lettering="lines">This<br/>is<br/>a<br/>sentence</div>
  -->
 <div class="aboutPic materialboxed responsive-img" materialboxed>
-  <img class="text-center" src="public/img/guramLogo.jpg">
+  <img class="text-center" src="/img/guramLogo.jpg">
 </div>
 
 <section id="contact">
@@ -47,3 +47,4 @@
             </div>
         </div>
     </section>
+
