--- a/public/app/views/art.html
+++ b/public/app/views/art.html
@@ -5,8 +5,8 @@
     <div class="modal-content">
         <h2>Couch and TV</h2>
         <h3>Price: $50</h3>
-        <a href="/#/payment" class="modal-action modal-close waves-effect waves-green btn-flat">Purchase</a>
-        <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Close</a>
+        <a ng-click="purchases.push()" class="modal-action modal-close waves-effect waves-green btn-flat">Purchase</a>
+        <a href="/#/art" class="modal-action modal-close waves-effect waves-green btn-flat">Close</a>
     </div>
 </div>
 
@@ -16,7 +16,7 @@
         <h2>Bird</h2>
         <h3>Price: $50</h3>
         <a href="/#/payment" class="modal-action modal-close waves-effect waves-green btn-flat">Purchase</a>
-        <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Close</a>
+        <a href="/#/art" class=" modal-action modal-close waves-effect waves-green btn-flat">Close</a>
     </div>
 </div>
 
@@ -36,7 +36,7 @@
         <h2>Death Star Route</h2>
         <h3>Price: $50</h3>
         <a href="/#/payment" class="modal-action modal-close waves-effect waves-green btn-flat">Purchase</a>
-        <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Close</a>
+        <a href="/#/art" class=" modal-action modal-close waves-effect waves-green btn-flat">Close</a>
     </div>
 </div>
 
@@ -46,7 +46,7 @@
         <h2>Frontside Air</h2>
         <h3>Price: $50</h3>
         <a href="/#/payment" class="modal-action modal-close waves-effect waves-green btn-flat">Purchase</a>
-        <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Close</a>
+        <a href="/#/art" class=" modal-action modal-close waves-effect waves-green btn-flat">Close</a>
     </div>
 </div>
 
@@ -56,7 +56,7 @@
         <h2>Ghost Release</h2>
         <h3>Price: $50</h3>
         <a href="/#/payment" class="modal-action modal-close waves-effect waves-green btn-flat">Purchase</a>
-        <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Close</a>
+        <a href="/#/art" class=" modal-action modal-close waves-effect waves-green btn-flat">Close</a>
     </div>
 </div>
 
@@ -66,7 +66,7 @@
         <h2>Long Hair</h2>
         <h3>Price: $50</h3>
         <a href="/#/payment" class="modal-action modal-close waves-effect waves-green btn-flat">Purchase</a>
-        <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Close</a>
+        <a href="/#/art" class=" modal-action modal-close waves-effect waves-green btn-flat">Close</a>
     </div>
 </div>
 
@@ -76,7 +76,7 @@
         <h2>Mustache Man</h2>
         <h3>Price: $50</h3>
         <a href="/#/payment" class="modal-action modal-close waves-effect waves-green btn-flat">Purchase</a>
-        <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Close</a>
+        <a href="/#/art" class=" modal-action modal-close waves-effect waves-green btn-flat">Close</a>
     </div>
 </div>
 
@@ -86,7 +86,7 @@
         <h2>On the Couch</h2>
         <h3>Price: $50</h3>
         <a href="/#/payment" class="modal-action modal-close waves-effect waves-green btn-flat">Purchase</a>
-        <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Close</a>
+        <a href="/#/art" class=" modal-action modal-close waves-effect waves-green btn-flat">Close</a>
     </div>
 </div>
 
@@ -96,7 +96,7 @@
         <h2>Open Country</h2>
         <h3>Price: $50</h3>
         <a href="/#/payment" class="modal-action modal-close waves-effect waves-green btn-flat">Purchase</a>
-        <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Close</a>
+        <a href="/#/art" class=" modal-action modal-close waves-effect waves-green btn-flat">Close</a>
     </div>
 </div>
 
@@ -106,7 +106,7 @@
         <h2>Sea of Skulls</h2>
         <h3>Price: $50</h3>
         <a href="/#/payment" class="modal-action modal-close waves-effect waves-green btn-flat">Purchase</a>
-        <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Close</a>
+        <a href="/#/art" class=" modal-action modal-close waves-effect waves-green btn-flat">Close</a>
     </div>
 </div>
 
@@ -116,21 +116,21 @@
         <h2>Window Window on the wall</h2>
         <h3>Price: $50</h3>
         <a href="/#/payment" class="modal-action modal-close waves-effect waves-green btn-flat">Purchase</a>
-        <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Close</a>
+        <a href="/#/art" class=" modal-action modal-close waves-effect waves-green btn-flat">Close</a>
     </div>   
 </div>
 
 <div>
-    <img href="#Modal1" class="painting z-depth-1" src="public/img/couch_and_tv.jpg" modal/>
-    <img href="#Modal2" class="painting z-depth-1" src="public/img/bird.jpg" modal/>
-    <img href="#Modal3" class="painting z-depth-1" src="public/img/brown_bird.jpg" modal/>
-    <img href="#Modal4" class="painting z-depth-1" src="public/img/death_star_route.jpg" modal/>
-    <img href="#Modal5" class="painting z-depth-1" src="public/img/frontside_air.jpg" modal/>
-    <img href="#Modal6" class="painting z-depth-1" src="public/img/ghost_release.jpg" modal/>
-    <img href="#Modal7" class="painting z-depth-1" src="public/img/long_hair.jpg" modal/>
-    <img href="#Modal8" class="painting z-depth-1" src="public/img/mustache_man.jpg" modal/>
-    <img href="#Modal9" class="painting z-depth-1" src="public/img/on_the_couch.jpg" modal/>
-    <img href="#Modal10" class="painting z-depth-1" src="public/img/open_country.jpg" modal/>
-    <img href="#Modal11" class="painting z-depth-1" src="public/img/sea_of_skulls.jpg" modal/>
-    <img href="#Modal12" class="painting z-depth-1" src="public/img/window_window.jpg" modal/>
+    <img href="#Modal1" class="painting z-depth-1" src="/img/couch_and_tv.jpg" modal/>
+    <img href="#Modal2" class="painting z-depth-1" src="/img/bird.jpg" modal/>
+    <img href="#Modal3" class="painting z-depth-1" src="/img/brown_bird.jpg" modal/>
+    <img href="#Modal4" class="painting z-depth-1" src="/img/death_star_route.jpg" modal/>
+    <img href="#Modal5" class="painting z-depth-1" src="/img/frontside_air.jpg" modal/>
+    <img href="#Modal6" class="painting z-depth-1" src="/img/ghost_release.jpg" modal/>
+    <img href="#Modal7" class="painting z-depth-1" src="/img/long_hair.jpg" modal/>
+    <img href="#Modal8" class="painting z-depth-1" src="/img/mustache_man.jpg" modal/>
+    <img href="#Modal9" class="painting z-depth-1" src="/img/on_the_couch.jpg" modal/>
+    <img href="#Modal10" class="painting z-depth-1" src="/img/open_country.jpg" modal/>
+    <img href="#Modal11" class="painting z-depth-1" src="/img/sea_of_skulls.jpg" modal/>
+    <img href="#Modal12" class="painting z-depth-1" src="/img/window_window.jpg" modal/>
 </div>
