--- a/public/app/views/main.html
+++ b/public/app/views/main.html
@@ -1,33 +1,38 @@
 <div class="slider" slider>
     <ul class="slides">
         <li>
-            <img class="mainImage" src="public/img/sea_of_skulls.jpg" style=> <!-- random image -->
+            <img class="mainImage" src="/img/dedRecording.png" style=> 
             <div class="caption center-align">
                 <h1 class="title">Graeme Smith</h1>
                 <h5 class="light grey-text text-lighten-3">Artist</h5>
             </div>
         </li>
         <li>
-            <img src="public/img/daymonAndBen1.jpg"> <!-- random image -->
+            <img src="/img/daymonAndBen1.jpg"> 
             <div class="caption left-align">
                 <h3>Graeme Smith</h3>
                 <h5 class="light grey-text text-lighten-3">Rock Star</h5>
             </div>
         </li>
         <li>
-            <img src="public/img/frontside_air.jpg"> <!-- random image -->
+            <img src="/img/frontside_air.jpg"> 
             <div class="caption right-align">
                 <h3>Graeme Smith</h3>
                 <h5 class="light grey-text text-lighten-3">Unbound</h5>
             </div>
         </li>
         <li>
-            <img src="public/img/death_star_route.jpg"> <!-- random image -->
+            <img src="/img/guramLogo2.jpg">
             <div class="caption center-align">
                 <h3>Graeme Smith</h3>
-                <h5 class="light grey-text text-lighten-3"></h5>
+                <h5 class="light grey-text text-lighten-3">Pacific Northwest Art</h5>
             </div>
         </li>
     </ul>
 </div>
+
+<!-- <div class="title">
+    <img src="/img/guramLogo2.jpg">
+</div>
+ -->
 
