Secure login works

--- a/public/app/views/main.html
+++ b/public/app/views/main.html
@@ -4,29 +4,29 @@
             <img class="mainImage" src="/img/dedRecording.png" style=> 
             <div class="caption center-align">
                 <h1 class="title">Graeme Smith</h1>
-                <h5 class="light grey-text text-lighten-3">Artist</h5>
+                <h5 class="light black-text text-lighten-3">Artist</h5>
             </div>
         </li>
         <li>
             <img src="/img/daymonAndBen1.jpg"> 
             <div class="caption left-align">
                 <h3>Graeme Smith</h3>
-                <h5 class="light grey-text text-lighten-3">Rock Star</h5>
+                <h5 class="light black-text text-lighten-3">Rock Star</h5>
             </div>
         </li>
         <li>
             <img src="/img/frontside_air.jpg"> 
             <div class="caption right-align">
                 <h3>Graeme Smith</h3>
-                <h5 class="light grey-text text-lighten-3">Unbound</h5>
+                <h5 class="light black-text text-lighten-3">Unbound</h5>
             </div>
         </li>
         <li>
             <img src="/img/guramLogo2.jpg">
-            <div class="caption center-align">
+            <!-- <div class="caption center-align">
                 <h3>Graeme Smith</h3>
-                <h5 class="light grey-text text-lighten-3">Pacific Northwest Art</h5>
-            </div>
+                <h5 class="light black-text text-lighten-3">Pacific Northwest Art</h5>
+            </div> -->
         </li>
     </ul>
 </div>
