Still can't add to my inventory, returning strang errors

--- a/public/app/views/about.html
+++ b/public/app/views/about.html
@@ -1,9 +1,5 @@
-<!-- <span data-lettering="letters">This is a sentence</span> 
-<span data-lettering="words">This is a sentence</span> 
-<div data-lettering="lines">This<br/>is<br/>a<br/>sentence</div>
- -->
 <div class="aboutPic materialboxed responsive-img" materialboxed>
-  <img class="text-center" src="/img/guramLogo.jpg">
+  <img class="text-center z-depth-4" id="lizard" src="/img/guramLogo.jpg">
 </div>
 
 <section id="contact">
