--- a/public/app/views/signin.html
+++ b/public/app/views/signin.html
@@ -4,7 +4,7 @@
 <div class="container admin">
 
   <form ng-submit="userLogin()">
-    <input type="text" name="password" placeholder="Enter Admin Password" ng-model="user.password">
+    <input type="password" name="password" placeholder="Enter Admin Password" ng-model="user.password">
     <button type="submit" class="waves-effect waves-light btn" name="signin">Graeme In</button>
   </form>
 
