--- a/public/app/views/art.html
+++ b/public/app/views/art.html
@@ -3,8 +3,9 @@
 <!-- Modal Structure -->
 <div id="Modal1" class="modal container">
     <div class="modal-content">
-        <h2>Couch and TV</h2>
-        <h3>Price: $50</h3>
+        <h4>Couch and TV</h4>
+        <h5>Price: $50</h5>
+        <img class="paintingModal" src="img/couch_and_tv.jpg">
         <a ng-click="purchases.push()" class="modal-action modal-close waves-effect waves-green btn-flat">Purchase</a>
         <a href="/#/art" class="modal-action modal-close waves-effect waves-green btn-flat">Close</a>
     </div>
@@ -13,8 +14,9 @@
 <!-- Modal Structure -->
 <div id="Modal2" class="modal container">
     <div class="modal-content">
-        <h2>Bird</h2>
-        <h3>Price: $50</h3>
+        <h4>Bird</h4>
+        <h5>Price: $50</h5>
+        <img class="paintingModal" src="img/bird.jpg">
         <a href="/#/payment" class="modal-action modal-close waves-effect waves-green btn-flat">Purchase</a>
         <a href="/#/art" class=" modal-action modal-close waves-effect waves-green btn-flat">Close</a>
     </div>
@@ -23,8 +25,9 @@
 <!-- Modal Structure -->
 <div id="Modal3" class="modal container">
     <div class="modal-content">
-        <h2>Brown Bird</h2>
-        <h3>Price: $50</h3>
+        <h4>Brown Bird</h4>
+        <h5>Price: $50</h5>
+        <img class="paintingModal" src="img/brown_bird.jpg">
         <a href="/#/payment" class="modal-action modal-close waves-effect waves-green btn-flat">Purchase</a>
         <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Close</a>
     </div>
@@ -33,8 +36,9 @@
 <!-- Modal Structure -->
 <div id="Modal4" class="modal container">
     <div class="modal-content">
-        <h2>Death Star Route</h2>
-        <h3>Price: $50</h3>
+        <h4>Death Star Route</h4>
+        <h5>Price: $50</h5>
+        <img class="paintingModal" src="img/death_star_route.jpg">
         <a href="/#/payment" class="modal-action modal-close waves-effect waves-green btn-flat">Purchase</a>
         <a href="/#/art" class=" modal-action modal-close waves-effect waves-green btn-flat">Close</a>
     </div>
@@ -43,18 +47,20 @@
 <!-- Modal Structure -->
 <div id="Modal5" class="modal container">
     <div class="modal-content">
-        <h2>Frontside Air</h2>
-        <h3>Price: $50</h3>
+        <h4>Frontside Air</h4>
+        <h5>Price: $50</h5>
+        <img class="paintingModal" src="img/frontside_air.jpg">
         <a href="/#/payment" class="modal-action modal-close waves-effect waves-green btn-flat">Purchase</a>
         <a href="/#/art" class=" modal-action modal-close waves-effect waves-green btn-flat">Close</a>
     </div>
-</div>
+</div>-
 
 <!-- Modal Structure -->
 <div id="Modal6" class="modal container">
     <div class="modal-content">
-        <h2>Ghost Release</h2>
-        <h3>Price: $50</h3>
+        <h4>Ghost Release</h4>
+        <h5>Price: $50</h5>
+        <img class="paintingModal" src="img/ghost_release.jpg">
         <a href="/#/payment" class="modal-action modal-close waves-effect waves-green btn-flat">Purchase</a>
         <a href="/#/art" class=" modal-action modal-close waves-effect waves-green btn-flat">Close</a>
     </div>
@@ -63,8 +69,9 @@
 <!-- Modal Structure -->
 <div id="Modal7" class="modal container">
     <div class="modal-content">
-        <h2>Long Hair</h2>
-        <h3>Price: $50</h3>
+        <h4>Long Hair</h4>
+        <h5>Price: $50</h5>
+        <img class="paintingModal" src="img/long_hair.jpg">
         <a href="/#/payment" class="modal-action modal-close waves-effect waves-green btn-flat">Purchase</a>
         <a href="/#/art" class=" modal-action modal-close waves-effect waves-green btn-flat">Close</a>
     </div>
@@ -73,8 +80,9 @@
 <!-- Modal Structure -->
 <div id="Modal8" class="modal container">
     <div class="modal-content">
-        <h2>Mustache Man</h2>
-        <h3>Price: $50</h3>
+        <h4>Mustache Man</h4>
+        <h5>Price: $50</h5>
+        <img class="paintingModal" src="img/mustache_man.jpg">
         <a href="/#/payment" class="modal-action modal-close waves-effect waves-green btn-flat">Purchase</a>
         <a href="/#/art" class=" modal-action modal-close waves-effect waves-green btn-flat">Close</a>
     </div>
@@ -83,8 +91,9 @@
 <!-- Modal Structure -->
 <div id="Modal9" class="modal container">
     <div class="modal-content">
-        <h2>On the Couch</h2>
-        <h3>Price: $50</h3>
+        <h4>On the Couch</h4>
+        <h5>Price: $50</h5>
+        <img class="paintingModal" src="img/on_the_couch.jpg">
         <a href="/#/payment" class="modal-action modal-close waves-effect waves-green btn-flat">Purchase</a>
         <a href="/#/art" class=" modal-action modal-close waves-effect waves-green btn-flat">Close</a>
     </div>
@@ -93,8 +102,9 @@
 <!-- Modal Structure -->
 <div id="Modal10" class="modal container">
     <div class="modal-content">
-        <h2>Open Country</h2>
-        <h3>Price: $50</h3>
+        <h4>Open Country</h4>
+        <h5>Price: $50</h5>
+        <img class="paintingModal" src="img/open_country.jpg">
         <a href="/#/payment" class="modal-action modal-close waves-effect waves-green btn-flat">Purchase</a>
         <a href="/#/art" class=" modal-action modal-close waves-effect waves-green btn-flat">Close</a>
     </div>
@@ -103,8 +113,9 @@
 <!-- Modal Structure -->
 <div id="Modal11" class="modal container">
     <div class="modal-content">
-        <h2>Sea of Skulls</h2>
-        <h3>Price: $50</h3>
+        <h4>Sea of Skulls</h4>
+        <h5>Price: $50</h5>
+        <img class="paintingModal" src="img/sea_of_skulls.jpg">
         <a href="/#/payment" class="modal-action modal-close waves-effect waves-green btn-flat">Purchase</a>
         <a href="/#/art" class=" modal-action modal-close waves-effect waves-green btn-flat">Close</a>
     </div>
@@ -113,14 +124,15 @@
 <!-- Modal Structure -->
 <div id="Modal12" class="modal container">
     <div class="modal-content">
-        <h2>Window Window on the wall</h2>
-        <h3>Price: $50</h3>
+        <h4>Window Window on the wall</h4>
+        <h5>Price: $50</h5>
+        <img class="paintingModal" src="img/window_window.jpg">
         <a href="/#/payment" class="modal-action modal-close waves-effect waves-green btn-flat">Purchase</a>
         <a href="/#/art" class=" modal-action modal-close waves-effect waves-green btn-flat">Close</a>
     </div>   
 </div>
 
-<div>
+<div class="pictureBoard">
     <img href="#Modal1" class="painting z-depth-1" src="/img/couch_and_tv.jpg" modal/>
     <img href="#Modal2" class="painting z-depth-1" src="/img/bird.jpg" modal/>
     <img href="#Modal3" class="painting z-depth-1" src="/img/brown_bird.jpg" modal/>
