--- a/public/app/views/about.html
+++ b/public/app/views/about.html
@@ -2,8 +2,8 @@
   <img class="text-center z-depth-4" id="lizard" src="/img/guramLogo.jpg">
 </div>
 
-<section id="contact">
-        <div class="container">
+<section>
+        <div class="container" id="contact">
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="title">Contact Graeme Smith</h2>
