--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,6 @@
 html body {
   /*background-color: #838383;*/
-  background-image: url('app/img/backgroundRoad.jpg') no-repeat; 
+  background: url('/img/backgroundRoad.jpg') no-repeat; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -87,16 +87,22 @@ footer {
   background-color: green;
 }
 
-.admin {
-  padding: 25px;
-  border: 1px solid black;
-}
-
-.inventory {
+.inventory, .admin {
+  color: white;
   padding: 25px;
   border: 1px solid black;
 }
 
 .brand-logo {
   margin-left: 10px;
+}
+
+label {
+  color: black;
+}
+
+#contact {
+  color: white;
+  /*background: rgba(255, 255, 255, 0.5);
+  background-size: cover;*/
 }
