Graeme can add inventory

--- a/public/app/views/addInventory.html
+++ b/public/app/views/addInventory.html
@@ -18,7 +18,7 @@
         <input type="text" ng-model="product.description" name="description" ng-model="" length="150">
         <label>Description</label>
     </div>
-    <!-- <div input-field class="col s6">
+    <div input-field class="col s6">
         <select class="" ng-model="product.art" material-select watch>
             <option name="art" ng-repeat="value in artValues track by $index">{{value}}</option>
         </select>
@@ -29,7 +29,7 @@
             <option name="product" ng-repeat="value in productValues">{{value}}</option>
         </select>
         <label>Product</label>
-    </div> -->
-    <button type="submit" class="waves-effect waves-light btn" name="addInventory">Add Inventory</button>
+    </div>
+    <button type="submit" class="waves-effect waves-light btn">Add Inventory</button>
   </form>
 </div>
