--- a/public/css/style.css
+++ b/public/css/style.css
@@ -84,7 +84,7 @@ footer {
 }
 
 .nav-wrapper {
-  background-color: green;
+  background-color: #0a290a;
 }
 
 .inventory, .admin {
@@ -103,6 +103,4 @@ label {
 
 #contact {
   color: white;
-  /*background: rgba(255, 255, 255, 0.5);
-  background-size: cover;*/
 }
